test/corpus/clojure_1_12.txt
================================================================================
Qualified static method symbol (1.12 method value)
================================================================================

Integer/parseInt

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_ns)
    (sym_name)))

================================================================================
Instance method symbol (1.12)
================================================================================

String/.length

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_ns)
    (sym_name)))

================================================================================
Fully-qualified instance method symbol (1.12)
================================================================================

java.lang.String/.toUpperCase

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_ns)
    (sym_name)))

================================================================================
Constructor method value (1.12)
================================================================================

String/new

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_ns)
    (sym_name)))

================================================================================
Array class syntax (CLJ-2807)
================================================================================

String/1

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_ns)
    (sym_name)))

================================================================================
Primitive array class syntax (CLJ-2807)
================================================================================

int/2

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_ns)
    (sym_name)))

================================================================================
Fully-qualified array class syntax (CLJ-2807)
================================================================================

clojure.lang.PersistentVector/1

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_ns)
    (sym_name)))

================================================================================
Param-tags metadata on a method symbol (1.12)
================================================================================

^[int long] Math/max

--------------------------------------------------------------------------------

(source
  (sym_lit
    (meta_lit
      (vec_lit
        (sym_lit
          (sym_name))
        (sym_lit
          (sym_name))))
    (sym_ns)
    (sym_name)))

================================================================================
Empty param-tags metadata (1.12)
================================================================================

^[] x

--------------------------------------------------------------------------------

(source
  (sym_lit
    (meta_lit
      (vec_lit))
    (sym_name)))

================================================================================
Param-tags metadata inside a parameter vector (1.12)
================================================================================

[^[long] x]

--------------------------------------------------------------------------------

(source
  (vec_lit
    (sym_lit
      (meta_lit
        (vec_lit
          (sym_lit
            (sym_name))))
      (sym_name))))

================================================================================
Instance method call (1.12)
================================================================================

(String/.length "hi")

--------------------------------------------------------------------------------

(source
  (list_lit
    (sym_lit
      (sym_ns)
      (sym_name))
    (str_lit)))

================================================================================
Method value passed to a higher-order function (1.12)
================================================================================

(map Integer/parseInt ["1" "2"])

--------------------------------------------------------------------------------

(source
  (list_lit
    (sym_lit
      (sym_name))
    (sym_lit
      (sym_ns)
      (sym_name))
    (vec_lit
      (str_lit)
      (str_lit))))

================================================================================
Return-type metadata on the argument vector (defn, issue #65)
================================================================================

(defn to-string ^String [arg] (.toString arg))

--------------------------------------------------------------------------------

(source
  (list_lit
    (sym_lit
      (sym_name))
    (sym_lit
      (sym_name))
    (vec_lit
      (meta_lit
        (sym_lit
          (sym_name)))
      (sym_lit
        (sym_name)))
    (list_lit
      (sym_lit
        (sym_name))
      (sym_lit
        (sym_name)))))
